Tests/Conformance/Generated/Builtin/Constant/String/String_08.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.String.String_08

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_string_string_08 "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/string/string-08/string-08.uplc"

end Tests.Conformance.Generated.Builtin.Constant.String.String_08
